--- a/index.html
+++ b/index.html
@@ -9,6 +9,40 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>AOS.init({ duration: 800, once: true });</script>
+  <script type="application/ld+json">
+  [
+    {
+      "@context": "https://schema.org",
+      "@type": "JobPosting",
+      "title": "Caregivers – Canada",
+      "description": "Exciting caregiver roles with verified employers in Canada.",
+      "hiringOrganization": {
+        "@type": "Organization",
+        "name": "Afrilink Agency"
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "JobPosting",
+      "title": "Hospitality Staff – Qatar",
+      "description": "Join luxury hotels and restaurants in Doha and beyond.",
+      "hiringOrganization": {
+        "@type": "Organization",
+        "name": "Afrilink Agency"
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "JobPosting",
+      "title": "Construction Workers – Dubai",
+      "description": "Build your career in Dubai’s fast-growing construction industry.",
+      "hiringOrganization": {
+        "@type": "Organization",
+        "name": "Afrilink Agency"
+      }
+    }
+  ]
+  </script>
 </head>
 <body>
   <!-- ================= HEADER ================= -->
