--- a/index.html
+++ b/index.html
@@ -10,61 +10,35 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>AOS.init({ duration: 800, once: true });</script>
   <script type="application/ld+json">
-  [
-    {
-      "@context": "https://schema.org",
-      "@type": "JobPosting",
-      "title": "Caregivers – Canada",
-      "description": "Exciting caregiver roles with verified employers in Canada.",
-      "hiringOrganization": {
-        "@type": "Organization",
-        "name": "Afrilink Agency"
-      }
-    },
-    {
-      "@context": "https://schema.org",
-      "@type": "JobPosting",
-      "title": "Hospitality Staff – Qatar",
-      "description": "Join luxury hotels and restaurants in Doha and beyond.",
-      "hiringOrganization": {
-        "@type": "Organization",
-        "name": "Afrilink Agency"
-      }
-    },
-    {
-      "@context": "https://schema.org",
-      "@type": "JobPosting",
-      "title": "Construction Workers – Dubai",
-      "description": "Build your career in Dubai’s fast-growing construction industry.",
-      "hiringOrganization": {
-        "@type": "Organization",
-        "name": "Afrilink Agency"
-      }
-    }
-  ]
+  {
+    "@context": "https://schema.org",
+    "@type": "JobPosting",
+    "title": "Caregivers – Canada",
+    "description": "Exciting caregiver roles with verified employers in Canada."
+  }
   </script>
 </head>
 <body>
   <!-- ================= HEADER ================= -->
   <header>
     <div class="container">
-      <a href="index.html"><img src="images/afrilinklogo.webp" alt="Afrilink Agency Logo" style="height:50px;" loading="lazy"></a>
+      <a href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" style="height:50px;" loading="lazy"></a>
       <div class="menu-toggle">☰</div>
       <nav>
         <a href="index.html" class="active">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="jobs.html">Jobs</a>
-        <a href="contact.html" class="cta-btn">Apply Now</a>
+        <a href="contact.html" class="cta-btn">Contact Us</a>
       </nav>
     </div>
   </header>
 
   <!-- ================= HERO SECTION ================= -->
   <section class="hero">
-    <img src="images/jobhero1.webp" alt="Caregiver working in Canada" loading="lazy">
-    <img src="images/jobhero2.webp" alt="Global career paths for Kenyan talent" loading="lazy">
-    <img src="images/jobhero3.webp" alt="Work abroad with Afrilink Agency" loading="lazy">
+    <img src="images/jobhero1.jpg" alt="Caregiver working in Canada" loading="lazy">
+    <img src="images/jobhero2.jpg" alt="Global career paths for Kenyan talent" loading="lazy">
+    <img src="images/jobhero3.jpg" alt="Work abroad with Afrilink Agency" loading="lazy">
     <div class="hero-text" data-aos="fade-up">
       <h1>Kenya to the world, one career at a time</h1>
       <p>Connecting Kenyan Talent with Global Opportunities</p>
@@ -92,7 +66,7 @@
       <h2>Featured Job Destinations</h2>
       <div class="jobs-grid">
         <div class="job-card" data-aos="fade-up" data-aos-delay="100">
-          <img src="images/jobcanada.webp" alt="Caregiver job in Canada" loading="lazy">
+          <img src="images/jobcanada.jpg" alt="Caregiver job in Canada" loading="lazy">
           <div class="content">
             <h3 data-aos="fade-right" data-aos-delay="200">Caregivers – Canada</h3>
             <p data-aos="fade-right" data-aos-delay="300">Exciting caregiver roles with verified employers in Canada.</p>
@@ -100,7 +74,7 @@
           </div>
         </div>
         <div class="job-card" data-aos="fade-up" data-aos-delay="200">
-          <img src="images/jobqatar.webp" alt="Hospitality job in Qatar" loading="lazy">
+          <img src="images/jobqatar.jpg" alt="Hospitality job in Qatar" loading="lazy">
           <div class="content">
             <h3 data-aos="fade-right" data-aos-delay="300">Hospitality Staff – Qatar</h3>
             <p data-aos="fade-right" data-aos-delay="400">Join luxury hotels and restaurants in Doha and beyond.</p>
@@ -108,7 +82,7 @@
           </div>
         </div>
         <div class="job-card" data-aos="fade-up" data-aos-delay="300">
-          <img src="images/jobdubai.webp" alt="Construction job in Dubai" loading="lazy">
+          <img src="images/jobdubai.jpg" alt="Construction job in Dubai" loading="lazy">
           <div class="content">
             <h3 data-aos="fade-right" data-aos-delay="400">Construction Workers – Dubai</h3>
             <p data-aos="fade-right" data-aos-delay="500">Build your career in Dubai’s fast-growing construction industry.</p>
