--- a/about.html
+++ b/about.html
@@ -3,67 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Learn about Afrilink Agency, a trusted Kenyan recruitment agency connecting talent with global job opportunities.">
   <title>About – Afrilink Agency</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>AOS.init({ duration: 800, once: true });</script>
 </head>
 <body>
-
   <!-- ================= HEADER ================= -->
   <header>
     <div class="container">
-      <a href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Logo" style="height:50px;"></a>
+      <a href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" style="height:50px;" loading="lazy"></a>
+      <div class="menu-toggle">☰</div>
       <nav>
         <a href="index.html">Home</a>
         <a href="about.html" class="active">About</a>
         <a href="services.html">Services</a>
         <a href="jobs.html">Jobs</a>
-        <a href="contact.html" class="cta-btn">Apply Now</a>
+        <a href="contact.html" class="cta-btn">Contact Us</a>
       </nav>
     </div>
   </header>
 
   <!-- ================= HERO ================= -->
   <section class="page-hero" style="background-image:url('images/jobabout.jpg');">
-    <div class="hero-overlay">
-      <h1>About Afrilink Agency</h1>
-      <p>Kenya to the world, one career at a time</p>
-      <a href="contact.html" class="cta-btn">Start Your Application</a>
+    <div class="hero-overlay" data-aos="fade-up">
+      <h1 data-aos="fade-up" data-aos-delay="200">About Afrilink Agency</h1>
+      <p data-aos="fade-up" data-aos-delay="400">Kenya to the world, one career at a time</p>
+      <a href="jobs.html" class="cta-btn" data-aos="zoom-in" data-aos-delay="600">View Jobs</a>
     </div>
   </section>
 
   <!-- ================= ABOUT CONTENT ================= -->
-  <section class="fade-in">
+  <section data-aos="fade-up">
     <div class="container about-content">
-      <h2>Who We Are</h2>
-      <p>
+      <h2 data-aos="fade-right" data-aos-delay="100">Who We Are</h2>
+      <p data-aos="fade-right" data-aos-delay="200">
         Afrilink Agency is a licensed recruitment agency based in Kenya.  
         Our mission is to connect skilled and semi-skilled workers with
         reputable employers across the globe. We specialize in secure,
         transparent, and legal overseas job placements.
       </p>
 
-      <h3>Our Vision</h3>
-      <p>
+      <h3 data-aos="fade-right" data-aos-delay="300">Our Vision</h3>
+      <p data-aos="fade-right" data-aos-delay="400">
         To become the most trusted gateway for Kenyan talent seeking
         international career opportunities.
       </p>
 
-      <h3>Our Values</h3>
-      <ul>
+      <h3 data-aos="fade-right" data-aos-delay="500">Our Values</h3>
+      <ul data-aos="fade-right" data-aos-delay="600">
         <li><strong>Integrity:</strong> Honest and transparent processes.</li>
         <li><strong>Safety:</strong> Verified employers and secure travel.</li>
         <li><strong>Empowerment:</strong> Helping Kenyans achieve their dreams.</li>
       </ul>
 
       <div style="text-align:center; margin-top:20px;">
-        <a href="services.html" class="cta-btn">See Our Services</a>
+        <a href="services.html" class="cta-btn" data-aos="zoom-in" data-aos-delay="700">See Our Services</a>
       </div>
     </div>
   </section>
 
   <!-- ================= FOOTER ================= -->
   <footer>
-    <p>&copy; 2025 Afrilink Agency. Kenya to the world, one career at a time.</p>
+    <p>&copy; 2024 Afrilink Agency. Kenya to the world, one career at a time.</p>
   </footer>
 
   <script src="script.js"></script>
