--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     <div class="hero-text" data-aos="fade-up">
       <h1>Kenya to the world, one career at a time</h1>
       <p>Connecting Kenyan Talent with Global Opportunities</p>
-      <a href="jobs.html" class="cta-btn" data-aos="zoom-in" data-aos-delay="200">Explore Jobs</a>
+      <div class="hero-ctas" data-aos="zoom-in" data-aos-delay="200">
+        <a href="jobs.html" class="cta-btn">Explore Jobs</a>
+        <button class="apply-btn cta-btn" data-job="General Application">Apply Now</button>
+      </div>
     </div>
   </section>
 
@@ -69,7 +72,7 @@
           <img src="images/jobcanada.jpg" alt="Caregiver job in Canada" loading="lazy">
           <div class="content">
             <h3 data-aos="fade-right" data-aos-delay="200">Caregivers – Canada</h3>
-            <p data-aos="fade-right" data-aos-delay="300">Exciting caregiver roles with verified employers in Canada.</p>
+            <p data-aos="fade-right" data-aos-delay="300">Exciting caregiver roles with verified employers.</p>
             <button class="apply-btn" data-job="Caregivers – Canada" data-aos="zoom-in" data-aos-delay="400">Apply Now</button>
           </div>
         </div>
@@ -77,7 +80,7 @@
           <img src="images/jobqatar.jpg" alt="Hospitality job in Qatar" loading="lazy">
           <div class="content">
             <h3 data-aos="fade-right" data-aos-delay="300">Hospitality Staff – Qatar</h3>
-            <p data-aos="fade-right" data-aos-delay="400">Join luxury hotels and restaurants in Doha and beyond.</p>
+            <p data-aos="fade-right" data-aos-delay="400">Join luxury hotels and restaurants in Doha.</p>
             <button class="apply-btn" data-job="Hospitality Staff – Qatar" data-aos="zoom-in" data-aos-delay="500">Apply Now</button>
           </div>
         </div>
@@ -85,7 +88,7 @@
           <img src="images/jobdubai.jpg" alt="Construction job in Dubai" loading="lazy">
           <div class="content">
             <h3 data-aos="fade-right" data-aos-delay="400">Construction Workers – Dubai</h3>
-            <p data-aos="fade-right" data-aos-delay="500">Build your career in Dubai’s fast-growing construction industry.</p>
+            <p data-aos="fade-right" data-aos-delay="500">Build your career in Dubai’s fast-growing industry.</p>
             <button class="apply-btn" data-job="Construction Workers – Dubai" data-aos="zoom-in" data-aos-delay="600">Apply Now</button>
           </div>
         </div>
@@ -113,7 +116,7 @@
 
   <!-- ================= FOOTER ================= -->
   <footer>
-    <p>&copy; 2024 Afrilink Agency. Kenya to the world, one career at a time.</p>
+    <p>&copy; 2025 Afrilink Agency. Kenya to the world, one career at a time.</p>
   </footer>
 
   <script src="script.js"></script>
